<resources>
    <string name="app_name">Lawn Wizard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="already_a_user">Already a user?</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_type_of_account">Choose type of account</string>
    <string name="space">" "</string>
</resources>