<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B5E20"
    tools:context=".fragments.SignupFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/backgroundSignUp"
        android:layout_width="320dp"
        android:layout_height="654dp"
        android:background="@drawable/rounded_corner_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toTopOf="@+id/backgroundSignUp" />

    <TextView
        android:id="@+id/nameTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/name"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/nameEditTextSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp" />

    <EditText
        android:id="@+id/nameEditTextSignUp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/titleSignUp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/emailTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/email"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTextSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp" />

    <EditText
        android:id="@+id/emailEditTextSignUp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextSignUp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/phoneTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Phone Number"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditTextSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp" />

    <EditText
        android:id="@+id/phoneEditTextSignUp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextSignUp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/passwordTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/password"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp" />

    <EditText
        android:id="@+id/passwordEditTextSignUp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditTextSignUp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/confirmPasswordTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/confirm_password"
        android:textColor="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordEditTextSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp" />

    <EditText
        android:id="@+id/confirmPasswordEditTextSignUp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextSignUp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/typeTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/choose_type_of_account"
        android:textColor="#455A64"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditTextSignUp" />

    <Spinner
        android:id="@+id/accountTypeSignUp"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/typeTextSignUp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/signUpButtonSignUp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/backgroundSignUp"
        app:layout_constraintStart_toStartOf="@+id/backgroundSignUp"
        app:layout_constraintTop_toBottomOf="@+id/accountTypeSignUp"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>